--- a/src/components/carousel/Carousel.scss
+++ b/src/components/carousel/Carousel.scss
@@ -11,20 +11,21 @@
     align-items: center;
     text-align: center;
     font-size: 68px;
+    position: absolute;
+    width: 100%;
+    left: 0;
+    top: 40%;
     * {
-      border-style: ridge;
-      border-radius: 50%;
-      width: 60px;
-      height: 60px;
-      color: #c6c6c6;
-      background-color: #b1b1b1;
-      margin: 0.2em 0.5em 0em 0.5em;
-      line-height: 55px;
+      color: #4b4b4b;
+      line-height: 65px;
       align-items: center;
       text-align: center;
+      width: 40px;
+      height: 70px;
+      border-radius: 10px;
       &:hover {
-        color: #f5f5f5;
-        background-color: #d1d1d1;
+        color: #7d7d7d;
+        background-color: rgba(255, 255, 255, 0.3);
       }
     }
   }
