--- a/src/components/social-icons/SocialIcons.scss
+++ b/src/components/social-icons/SocialIcons.scss
@@ -1,13 +1,17 @@
 .social {
-  margin-top: 2%;
   ul.social-network {
-    list-style: none;
-    margin-left: 6.5%;
-    padding: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin: 0.5em 0 0.5em 0;
   }
   ul.social-network li {
     display: inline;
     margin: 5px 7px;
+  }
+  .fa-instagram{
+    font-size: 26px;
   }
   .social-network a.icoFacebook:hover {
     background-color: #3B5998;
@@ -40,9 +44,9 @@
     -webkit-border-radius: 50%;
     border-radius: 50%;
     text-align: center;
-    width: 40px;
-    height: 40px;
-    font-size: 25px;
+    width: 35px;
+    height: 35px;
+    font-size: 20px;
   }
   .social-circle li i {
     margin: 0;
